<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uwm.cs.fitrpg.MainActivity">

    <EditText
        android:id="@+id/PlayerStamina"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/EnemyStamina"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/StaminaLabel"
        app:layout_constraintTop_toBottomOf="@+id/PlayerLabel" />

    <TextView
        android:id="@+id/StaminaLabel"
        android:layout_width="150dp"
        android:layout_height="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/stamina_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/PlayerStamina"
        app:layout_constraintEnd_toStartOf="@+id/PlayerStamina"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EnemyStamina"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/PlayerStamina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/PlayerStamina" />

    <EditText
        android:id="@+id/PlayerStrength"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/EnemyStrength"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/StrengthLabel"
        app:layout_constraintTop_toBottomOf="@+id/PlayerStamina" />

    <TextView
        android:id="@+id/StrengthLabel"
        android:layout_width="150dp"
        android:layout_height="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/strength_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/PlayerStrength"
        app:layout_constraintEnd_toStartOf="@+id/PlayerStrength"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EnemyStrength"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/PlayerStrength"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/PlayerStrength" />

    <EditText
        android:id="@+id/PlayerEndurance"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/EnemyEndurance"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/EnduranceLabel"
        app:layout_constraintTop_toBottomOf="@+id/PlayerStrength" />

    <TextView
        android:id="@+id/EnduranceLabel"
        android:layout_width="150dp"
        android:layout_height="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/endurance_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/PlayerEndurance"
        app:layout_constraintEnd_toStartOf="@+id/PlayerEndurance"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EnemyEndurance"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/PlayerEndurance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/PlayerEndurance" />

    <EditText
        android:id="@+id/PlayerDexterity"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/EnemyDexterity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/DexterityLabel"
        app:layout_constraintTop_toBottomOf="@+id/PlayerEndurance" />

    <TextView
        android:id="@+id/DexterityLabel"
        android:layout_width="150dp"
        android:layout_height="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/dexterity_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/PlayerDexterity"
        app:layout_constraintEnd_toStartOf="@+id/PlayerDexterity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EnemyDexterity"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/PlayerDexterity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/PlayerDexterity" />

    <EditText
        android:id="@+id/PlayerSpeed"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/EnemySpeed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/SpeedLabel"
        app:layout_constraintTop_toBottomOf="@+id/PlayerDexterity" />

    <TextView
        android:id="@+id/SpeedLabel"
        android:layout_width="150dp"
        android:layout_height="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/speed_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/PlayerSpeed"
        app:layout_constraintEnd_toStartOf="@+id/PlayerSpeed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EnemySpeed"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/PlayerSpeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/PlayerSpeed" />

    <TextView
        android:id="@+id/PlayerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/player_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="202dp" />

    <TextView
        android:id="@+id/EnemyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enemy_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="309dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/combat_start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="134dp" />
</android.support.constraint.ConstraintLayout>
